CHT-282: Implementation